5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4496/executions/1662_1396.log
== TEST (2019-04-15 15:11:14) 
-- CODE:
val = float(input("digite valor consumido"))

if val > 300.00:
	gorjeta = (val * 6 / 1000)
else:
	gorjeta = (val * 10 / 1000)

	print (val + gorjeta)
-- OUTPUT:
226.745
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:11:23) 
-- CODE:
val = float(input("digite valor consumido "))

if val > 300.00:
	gorjeta = (val * 6 / 1000)
else:
	gorjeta = (val * 10 / 1000)

	print (val + gorjeta)
-- OUTPUT:
226.745
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:12:43) 
-- CODE:
val = float(input("digite valor consumido "))

if val > 300.00:
	gorjeta = (val / 6 * 1000)
else:
	gorjeta = (val / 10 * 1000)

	print (val + gorjeta)
-- OUTPUT:
22674.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:13:26) 
-- CODE:
val = float(input("digite valor consumido "))

if val > 300.00:
	gorjeta = (val * 6 / 1000)
else:
	gorjeta = (val * 10 / 1000)

	print (val + gorjeta)
-- OUTPUT:
226.745
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:13:52) 
-- CODE:
val = float(input("digite valor consumido "))

if val > 300.00:
	gorjeta = (val * 6 / 1000)
else:
	gorjeta = (val * 10 / 1000)

	print (val + gorjeta)
-- OUTPUT:
226.745
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:14:05) 
-- CODE:
val = float(input("digite valor consumido "))

if val >= 300.00:
	gorjeta = (val * 6 / 1000)
else:
	gorjeta = (val * 10 / 1000)

	print (val + gorjeta)
-- OUTPUT:
226.745
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:14:18) 
-- CODE:
val = float(input("digite valor consumido "))

if val >= 300.00:
	gorjeta = (val * 6 / 1000)
else:
	gorjeta = (val * 10 / 1000)

print (val + gorjeta)
-- OUTPUT:
226.745
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:14:29) 
-- CODE:
val = float(input("digite valor consumido "))

if val >= 300.00:
	gorjeta = (val * 6 / 1000)
else:
	gorjeta = (val * 10 / 1000)

print (val + gorjeta)
-- OUTPUT:
226.745
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:15:21) 
-- CODE:
val = float(input("digite valor consumido "))

if val >= 300.00:
	gorjeta = (val * 6 / 1000)
else:
	gorjeta = (val * 10 / 1000)

print (total a pagar = val + gorjeta)
-- ERROR:
File "XXXX", line 8
    print (total a pagar = val + gorjeta)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:15:30) 
-- CODE:
val = float(input("digite valor consumido "))

if val >= 300.00:
	gorjeta = (val * 6 / 1000)
else:
	gorjeta = (val * 10 / 1000)

print (total a pagar == val + gorjeta)
-- ERROR:
File "XXXX", line 8
    print (total a pagar == val + gorjeta)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:15:44) 
-- CODE:
val = float(input("digite valor consumido "))

if val >= 300.00:
	gorjeta = (val * 6 / 1000)
else:
	gorjeta = (val * 10 / 1000)

print ("total a pagar" == val + gorjeta)
-- OUTPUT:
False
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:16:18) 
-- CODE:
val = float(input("digite valor consumido "))

if val >= 300.00:
	gorjeta = (val * 6 / 1000)
else:
	gorjeta = (val * 10 / 1000)

print (round(val + gorjeta, 2)
-- ERROR:
File "XXXX", line 9
    
                                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:16:44) 
-- CODE:
val = float(input("digite valor consumido "))

if val >= 300.00:
	gorjeta = (val * 6 / 1000)
else:
	gorjeta = (val * 10 / 1000)

print (val + gorjeta)
-- OUTPUT:
226.745
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:17:00) 
-- CODE:
val = float(input("digite valor consumido "))

if val > 300.00:
	gorjeta = (val * 6 / 1000)
else:
	gorjeta = (val * 10 / 1000)

print (val + gorjeta)
-- OUTPUT:
226.745
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:18:08) 
-- CODE:
val = float(input("digite valor consumido "))

if val > 300.00:
	gorjeta = (val * 6 * 100 / 1000)
else:
	gorjeta = (val * 10 * 100 / 1000)

print (val + gorjeta)
-- OUTPUT:
449.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:18:50) 
-- CODE:
val = float(input("digite valor consumido "))

if val > 300.00:
	gorjeta = (val * 6 / 1000)
else:
	gorjeta = (val * 10 / 1000)

print (val + gorjeta)
-- OUTPUT:
226.745
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:19:23) 
-- CODE:
val = float(input("digite valor consumido "))

if val > 300.00:
	gorjeta = (val * 6 / 1000)
else:
	gorjeta = (val * 10 / 1000)

print (gorjeta)


-- OUTPUT:
2.245
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:19:55) 
-- CODE:
val = float(input("digite valor consumido "))

if val > 300.00:
	gorjeta = (val * 6 / 100)
else:
	gorjeta = (val * 10 / 100)

print (gorjeta)


-- OUTPUT:
22.45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:20:08) 
-- CODE:
val = float(input("digite valor consumido "))

if val > 300.00:
	gorjeta = (val * 6 / 100)
else:
	gorjeta = (val * 10 / 100)

print (val + gorjeta)


-- OUTPUT:
246.95
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:20:17) 
-- CODE:
val = float(input("digite valor consumido "))

if val > 300.00:
	gorjeta = (val * 6 / 100)
else:
	gorjeta = (val * 10 / 100)

print (val + gorjeta)


-- OUTPUT:
246.95
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:20:28) 
-- CODE:
val = float(input("digite valor consumido "))

if val > 300.00:
	gorjeta = (val * 6 / 100)
else:
	gorjeta = (val * 10 / 100)

print (val + gorjeta)


-- OUTPUT:
246.95
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:22:23) 
-- CODE:
val = float(input("digite valor consumido "))

if val > 300.00:
	gorjeta = (val * 6.0 / 100)
else:
	gorjeta = (val * 10.0 / 100)

print (val + gorjeta)


-- OUTPUT:
246.95
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:22:37) 
-- CODE:
val = float(input("digite valor consumido "))

if val > 300.00:
	gorjeta = (val * 6 / 100)
else:
	gorjeta = (val * 10 / 100)

print (val + gorjeta)


-- OUTPUT:
246.95
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:23:46) 
-- CODE:
val = float(input("digite valor consumido "))

if val > 300.00:
	gorjeta = (val * 6 / 100)
else:
	gorjeta = (val * 10 / 100)

print (gorjeta)


-- OUTPUT:
22.45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:24:17) 
-- CODE:
val = float(input("digite valor consumido "))

if val > 300.00:
	gorjeta = (val * 6 / 100)
else:
	gorjeta = (val * 10 / 100)

print (gorjeta)


-- OUTPUT:
22.45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:24:50) 
-- CODE:
val = float(input("digite valor consumido "))

if val > 300.00:
	gorjeta = (val * 6 / 100)
else:
	gorjeta = (val * 10 / 100)

print (gorjeta)


-- OUTPUT:
22.45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:25:14) 
-- CODE:
val = float(input("digite valor consumido "))

if val > 300.00:
	gorjeta = (val * 6 / 100)
else:
	gorjeta = (val * 10 / 100)

print (val + gorjeta)


-- OUTPUT:
246.95
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:25:28) 
-- CODE:
val = float(input("digite valor consumido "))

if val > 300.00:
	gorjeta = (val * 6 / 100)
else:
	gorjeta = (val * 10 / 100)

print (val + gorjeta)
-- OUTPUT:
246.95
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:26:10) 
-- CODE:
val = float(input("digite valor consumido "))

if val > 300.00:
	gorjeta = (val * 6 / 100)
else:
	gorjeta = (val * 10 / 100)

print (val + gorjeta)
-- EXECUTION TIME:
0.156337
-- TEST CASE 1:
---- input:
224.5
---- correct output:
246.95
---- user output:
246.95
-- TEST CASE 2:
---- input:
365.15
---- correct output:
387.06
---- user output:
387.05899999999997
-- TEST CASE 3:
---- input:
500
---- correct output:
530.0
---- user output:
530.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:26:35) 
-- CODE:
val = float(input("digite valor consumido "))

if val <= 300.00:
	gorjeta = (val * 10 / 100)
else:
	gorjeta = (val * 6 / 100)

print (val + gorjeta)
-- OUTPUT:
246.95
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:26:44) 
-- CODE:
val = float(input("digite valor consumido "))

if val <= 300.00:
	gorjeta = (val * 10 / 100)
else:
	gorjeta = (val * 6 / 100)

print (val + gorjeta)
-- OUTPUT:
246.95
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:26:49) 
-- CODE:
val = float(input("digite valor consumido "))

if val <= 300.00:
	gorjeta = (val * 10 / 100)
else:
	gorjeta = (val * 6 / 100)

print (val + gorjeta)
-- OUTPUT:
246.95
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:26:56) 
-- CODE:
val = float(input("digite valor consumido "))

if val <= 300.00:
	gorjeta = (val * 10 / 100)
else:
	gorjeta = (val * 6 / 100)

print (val + gorjeta)
-- EXECUTION TIME:
0.160112
-- TEST CASE 1:
---- input:
224.5
---- correct output:
246.95
---- user output:
246.95
-- TEST CASE 2:
---- input:
365.15
---- correct output:
387.06
---- user output:
387.05899999999997
-- TEST CASE 3:
---- input:
500
---- correct output:
530.0
---- user output:
530.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:27:19) 
-- CODE:
val = float(input("digite valor consumido "))

if val <= 300:
	gorjeta = (val * 10 / 100)
else:
	gorjeta = (val * 6 / 100)

print (val + gorjeta)
-- OUTPUT:
246.95
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:27:58) 
-- CODE:
val = float(input("digite valor consumido "))

if val <= 300:
	gorjeta = (val * 10 / 100)
else:
	gorjeta = (val * 6 / 100)

print (round(val + gorjeta))
-- OUTPUT:
247
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:28:12) 
-- CODE:
val = float(input("digite valor consumido "))

if val <= 300:
	gorjeta = (val * 10 / 100)
else:
	gorjeta = (val * 6 / 100)

print (round(val + gorjeta))
-- OUTPUT:
247
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:28:28) 
-- CODE:
val = float(input("digite valor consumido "))

if val <= 300:
	gorjeta = (val * 10 / 100)
else:
	gorjeta = (val * 6 / 100)

print (round(val + gorjeta))
-- EXECUTION TIME:
0.170346
-- TEST CASE 1:
---- input:
224.5
---- correct output:
246.95
---- user output:
247
-- TEST CASE 2:
---- input:
365.15
---- correct output:
387.06
---- user output:
387
-- TEST CASE 3:
---- input:
500
---- correct output:
530.0
---- user output:
530
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:28:36) 
-- CODE:
val = float(input("digite valor consumido "))

if val <= 300:
	gorjeta = (val * 10 / 100)
else:
	gorjeta = (val * 6 / 100)

print (round(val + gorjeta, 2))
-- OUTPUT:
246.95
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:28:43) 
-- CODE:
val = float(input("digite valor consumido "))

if val <= 300:
	gorjeta = (val * 10 / 100)
else:
	gorjeta = (val * 6 / 100)

print (round(val + gorjeta, 2))
-- EXECUTION TIME:
0.267207
-- TEST CASE 1:
---- input:
224.5
---- correct output:
246.95
---- user output:
246.95
-- TEST CASE 2:
---- input:
365.15
---- correct output:
387.06
---- user output:
387.06
-- TEST CASE 3:
---- input:
500
---- correct output:
530.0
---- user output:
530.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
